<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_of_the_day">Quiz of the day</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome_to">Welcome to</string>
    <string name="take_quiz">TAKE QUIZ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">LOGOUT</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="group">Group</string>
    <string name="student">Student</string>
    <string name="profile">Profile</string>
    <string name="logout2">Logout</string>
    <string name="hi">Hi,</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="select_date">Select Date</string>
    <string name="upload">Upload Quiz CSV</string>
    <string name="quiz_details">Quiz Details</string>
    <string name="select_time">Select Time</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="select_student_group">Select student group</string>
    <string name="group_name">Group name</string>
    <string name="no_data">No data</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="existing_password">Existing Password</string>
    <string name="new_password">New Password</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="finish">Finish</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="create_account">Create Account</string>
    <string name="search">Search</string>
    <string name="next_quiz">Next quiz :</string>
    <string name="dash">-</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="seconds">seconds</string>
    <string name="notice_questions_will_be_start_imported_from_the_second_line">Notice: questions will be start imported from the second line.</string>
    <string name="option_1">option 1</string>
    <string name="option_2">option 2</string>
    <string name="option_3">option 3</string>
    <string name="option_4">option 4</string>
    <string name="question">Question</string>
    <string name="publish_status">Publish status:</string>
    <string name="quiz_start_at">Quiz start at</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_student_account">Add student account</string>
    <string name="search_email_or_name">Search email or name</string>
    <string name="no_account_found">No account found.</string>
    <string name="submit">Submit</string>
    <string name="rank">Rank</string>
    <string name="you">(YOU)</string>
    <string name="score">Score</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="time_to_answer">Time to answer :</string>
    <string name="question_no">%1$s/%2$s</string>
    <string name="edit_profile_pic">Edit Profile Pic</string>
</resources>