<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.profile.ProfileFragment"
    android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/profile_bg_gradient"
            >
        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/logout"
            android:layout_marginEnd="16dp" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:shapeAppearanceOverlay="@style/roundedImageView"
                    app:srcCompat="@drawable/ic_person"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/profile_pic"/>
                <ImageView
                    android:id="@+id/icEditProfile"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_camera"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/edit_profile_pic"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="email.com"
                android:textSize="20sp"
                />
        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_weight="2"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/existing_password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_gravity="center"
                app:cornerRadius="3dp"
                android:backgroundTint="@color/light_blue"
                />
        </LinearLayout>

</LinearLayout>