<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.home.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="@color/blue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_app"
                style="@style/TextAppearance.Material3.HeadlineLarge"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:src="@drawable/quiz"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_of_the_day"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/blue"
            android:textStyle="bold"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_data"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/gray"
                android:gravity="center"
                android:layout_marginVertical="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvQuizzes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/blue"
            android:textStyle="bold"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <TextView
                android:id="@+id/tvGrpNoData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_data"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/gray"
                android:gravity="center"
                android:layout_marginVertical="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGroups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
