<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.addEditQuiz.BaseAddEditQuizFragment"
    android:padding="10dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_details"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_gravity="center"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilQuizName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQuizName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quiz_name"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                >
                <TextView
                    android:id="@+id/tvQuizDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSetDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="3dp"
                    android:text="@string/select_date"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tvSelectGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/select_student_group"
                android:drawablePadding="16dp"
                android:padding="20dp"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/zinc"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/publish_status"
                android:textColor="@color/zinc" />
            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/select_student_group"
                android:drawablePadding="16dp"
                android:padding="20dp"
                android:textColorHint="@color/zinc" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp" >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_upload"
                    app:iconSize="36dp"
                    android:text="@string/upload"
                    android:textSize="20sp"
                    android:paddingEnd="36dp"
                    android:paddingStart="30dp"
                    android:layout_marginEnd="5dp"
                    />
                <ImageView
                    android:id="@+id/ivQuestionMark"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_help"
                    app:tint="@color/gray"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/create_quiz"
        android:textSize="20sp"
        android:paddingEnd="36dp"
        android:paddingStart="30dp"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/white"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>