<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.searchUser.SearchUserFragment"
    android:orientation="vertical"
    android:background="@color/lightest_blue"
    >
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_marginVertical="8dp"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailOrName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_email_or_name"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        app:cornerRadius="8dp"
        android:clickable="false"
        android:text="@string/search"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStudents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <TextView
            android:id="@+id/tvNoAccFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_account_found"
            android:visibility="gone"
            />
    </FrameLayout>

</LinearLayout>
